--- a/LEAF_DISEASE_CLASSIFICATION.ipynb
+++ b/LEAF_DISEASE_CLASSIFICATION.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOHrXbNV1u1KDWsIT7Xo43r",
+      "authorship_tag": "ABX9TyPIl75zy95x3Zuwx9fuNmlT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1071,8 +1071,7 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Example data: Replace these lists with your actual training log data\n",
-        "epochs = range(1, 31)  # Adjust the range to match the number of epochs\n",
+        "epochs = range(1, 31)\n",
         "train_losses = [6.4713, 5.1779, 2.9946, 1.5278, 1.0673, 0.5394, 0.3555, 0.4918, 0.3153, 0.2247,\n",
         "                0.2392, 0.2757, 0.1639, 0.1334, 0.2813, 0.2883, 0.1695, 0.1021, 0.0864, 0.1067,\n",
         "                0.0537, 0.1269, 0.0481, 0.1100, 0.0390, 0.0387, 0.0556, 0.1732, 0.0763, 0.0273]\n",
